[gd_scene load_steps=8 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://main/game/game.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/main-font-64.tres" type="DynamicFont" id=3]
[ext_resource path="res://main/display.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "end_game"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("game_over/label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start_game"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("title_screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("title_screen:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("title_screen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("game_over/label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("title_screen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Display" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="root" type="Control" parent="Display"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="title_screen" type="Node2D" parent="Display/root"]
position = Vector2( 240, 250 )
__meta__ = {
"_edit_lock_": true
}

[node name="press_space" type="Label" parent="Display/root/title_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.6812
margin_top = -33.9411
margin_right = 92.3188
margin_bottom = 17.0589
custom_fonts/font = ExtResource( 3 )
text = "Press Space"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="game_over" type="Node2D" parent="Display/root"]
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="Display/root/game_over"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = 224.5
margin_right = 356.0
margin_bottom = 275.5
custom_fonts/font = ExtResource( 3 )
text = "White Ship won"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Display/root"]
anims/end_game = SubResource( 1 )
anims/start_game = SubResource( 2 )
anims/title_screen = SubResource( 3 )

[node name="Game" parent="." instance=ExtResource( 2 )]
[connection signal="start_game" from="." to="Display/root/AnimationPlayer" method="play" binds= [ "start_game" ]]
[connection signal="start_game" from="." to="Game" method="start_game"]
[connection signal="game_ended" from="Game" to="Display" method="game_ended"]
[connection signal="game_ended" from="Game" to="." method="game_ended"]
